--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/stack": "^6.0.0",
+    "cucumber": "^7.0.0-rc.0",
     "expo": "~42.0.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
+    "gherkin": "^9.0.0",
+    "jest": "^27.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -29,6 +32,7 @@
     "@types/react": "^17.0.15",
     "@types/react-native": "^0.64.12",
     "@types/react-test-renderer": "^17.0.1",
+    "detox": "^18.20.2",
     "typescript": "^4.3.5"
   },
   "private": true
